Fixes Mobile Modal Spacing

--- a/styles/Modal.module.scss
+++ b/styles/Modal.module.scss
@@ -90,11 +90,17 @@ $dark: #131e29;
 }
 
 @media (max-width: 598px) {
+  .background {
+    display: flex;
+    align-items: flex-end;
+  }
   .modalWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 15px 15px 0px 0px;
     width: 100%;
-    margin-top: 20%;
-    height: 90%;
+    max-height: 80%;
     grid-template-columns: 1fr;
   }
   .modalImg {
@@ -102,6 +108,7 @@ $dark: #131e29;
   }
   .modalContent {
     width: 95%;
+    max-height: 80%;
 
     h2 {
       font-size: 20px;
